[package]
name = "checktex"
version = "0.1.0"
authors = ["inakleinbottle <sam@inakleinbottle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
outparse = { git = "https://github.com/inakleinbottle/texoutparse-rs.git" }
